<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:background="@color/white"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintVertical_bias=".4"
           android:gravity="center"
           android:orientation="vertical">

           <ImageView
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_marginTop="50dp"
               android:src="@drawable/ic_user"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:tint="@color/primaryColor" />


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/join_us"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold"
               android:layout_marginTop="32dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="16dp"
               android:text="@string/join_us_message"
               android:layout_marginTop="8dp"/>

           <com.google.android.material.button.MaterialButton
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/create_account"
               android:textAllCaps="false"
               android:layout_marginTop="32dp"
               android:layout_marginHorizontal="16dp"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:textColor="@color/primaryColor"
               android:text="@string/already_have_account"
               android:foreground="?android:attr/selectableItemBackground"
               android:layout_marginBottom="8dp"
               android:layout_marginTop="32dp"/>

       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>