<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/actionBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/primaryColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/app_logo"
                    android:transitionName="appLogo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/appName"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <fragment
            android:id="@+id/container_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/bottomNav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionBar"
            app:navGraph="@navigation/home_bottom_nav_graph" />

        <com.gauravk.bubblenavigation.BubbleNavigationLinearView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="12dp"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/subHomeFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                app:bt_active="true"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:elevation="2dp"
                app:bt_colorActive="@color/white"
                app:bt_colorInactive="@color/primaryColor"
                app:bt_icon="@drawable/ic_home"
                app:bt_padding="12dp"
                app:bt_shape="@drawable/bottom_nav_item_bg"
                app:bt_title="@string/home"
                app:bt_titlePadding="8dp" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/cartFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:elevation="2dp"
                app:bt_colorActive="@color/white"
                app:bt_colorInactive="@color/primaryColor"
                app:bt_icon="@drawable/ic_shopping_bag"
                app:bt_padding="12dp"
                app:bt_shape="@drawable/bottom_nav_item_bg"
                app:bt_title="@string/cart"
                app:bt_titlePadding="15dp" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/profileFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_colorActive="@color/white"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:elevation="2dp"
                app:bt_colorInactive="@color/primaryColor"
                app:bt_icon="@drawable/ic_user"
                app:bt_padding="12dp"
                app:bt_shape="@drawable/bottom_nav_item_bg"
                app:bt_title="@string/profile"
                app:bt_titlePadding="8dp" />

            <!-- Add more child items here - max upto 5 -->

        </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>