<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="kotlin.jvm.functions.Function0" />
        <import type="kotlin.Unit" />
        <variable
            name="backBtnClick"
            type="Function0&lt;Unit>" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.home.cart.CartFragment">


        <include
            android:id="@+id/appBar"
            layout="@layout/action_bar_layout"
            app:backBtnClick="@{backBtnClick}"
            app:pageTitle="@{@string/my_cart}" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dishsRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingVertical="16dp"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/cart_dish_list_item" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loadingProgress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_animation"
                    app:visibilityMode="ignore" />

                <LinearLayout
                    android:id="@+id/emptyViewLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">


                    <ImageView
                        android:id="@+id/emptyViewIcon"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:src="@drawable/ic_shopping_bag"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/emptyCart"
                        android:textColor="@color/primaryColor"
                        android:textSize="22sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/goToShopping"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="70dp"
                        android:text="@string/goToShopping"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:visibility="visible" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/chickOutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/pay_now_text_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/totalPrice"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cart_total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            tools:text="40" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/checkoutBtn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>